--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-# Core dependencies for ApiAi
+# Core dependencies
 PySide6>=6.5.0
 requests>=2.31.0
 cryptography>=41.0.0
 
-# Optional: AI API clients
-# Uncomment if using these providers directly:
-# anthropic>=0.7.0
-# openai>=1.3.0
+# AI providers (optional - install only if needed)
+# anthropic>=0.34.0
+# openai>=1.0.0
 
-# Optional: Document export
-# python-docx>=1.0.0
-# reportlab>=4.0.0
+# Document generation (optional - for saving results)
+python-docx>=1.1.0
+reportlab>=4.0.0
