Add build tools to requirements.txt
- Added py2app and setuptools (commented, for macOS builds)
- Organized dependencies by category

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ cryptography>=41.0.0
 # Document generation (optional - for saving results)
 python-docx>=1.1.0
 reportlab>=4.0.0
+
+# Build tools (optional - only for building installers)
+# py2app>=0.28.0        # macOS .app bundle creation
+# setuptools>=68.0.0    # Required for py2app
