Update SETUP.md and requirements.txt
- Added installer download option (Variant 1) for end users
- Kept source installation (Variant 2) for developers
- Uncommented py2app and setuptools in requirements.txt
- Improved documentation structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ python-docx>=1.1.0
 reportlab>=4.0.0
 
 # Build tools (optional - only for building installers)
-# py2app>=0.28.0        # macOS .app bundle creation
-# setuptools>=68.0.0    # Required for py2app
+ py2app>=0.28.0        # macOS .app bundle creation
+ setuptools>=68.0.0    # Required for py2app
