Обновление документации: добавлены инструкции по виртуальному окружению и использованию python -m pip, переименована папка offline_packages в offline_package

--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,7 @@ config_qt.json
 *.log
 
 # Offline packages (too large for git)
+offline_package/*.whl
+offline_package/*.tar.gz
 offline_packages/*.whl
 offline_packages/*.tar.gz
