--- a/config/config_qt.json.template
+++ b/config/config_qt.json.template
@@ -1,7 +1,7 @@
 {
   "app_info": {
     "name": "ApiAi",
-    "version": "1.0.1",
+    "version": "1.0.3",
     "edition": "Standard",
     "description": "ApiAi Application",
     "release_date": "30.11.2025",
@@ -13,8 +13,8 @@
     "require_pin": true
   },
   "window": {
-    "width": 900,
-    "height": 700,
+    "width": 600,
+    "height": 600,
     "scale_factor": 1.0,
     "remember_size": true
   },
@@ -33,10 +33,11 @@
     "anthropic": "",
     "openai": "",
     "ollama_url": "http://localhost:11434",
-    "telegram_url": "http://localhost:8000/ai_query",
+    "telegram_url": "http://YOUR_SERVER_IP:8000/ai_query",
     "telegram_key": "",
     "telegram_enc_key": "",
     "telegram_use_encryption": true,
+    "telegram_hmac_secret": "",
     "app_id": "apiai-v1"
   }
 }
