--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ egui = "0.29"
 
 # Для HTTP запросов (аналог requests)
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+async-trait = "0.1"
 tokio = { version = "1", features = ["full"] }
 
 # Для JSON (аналог json в Python)
