Feat: Implement secure export functionality and update encryption docs

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "apiai"
-version = "1.0.5"
+version = "2.0.1"
 edition = "2021"
 
 [dependencies]
@@ -31,6 +31,13 @@ tracing-subscriber = "0.3"
 # Error handling
 anyhow = "1.0"
 thiserror = "1.0"
+
+# Encryption
+aes-gcm = "0.10"
+base64 = "0.21"
+rand = "0.8"
+sha2 = "0.10"
+hex = "0.4"
 
 [dev-dependencies]
 mockito = "1.5"
