feat: UI improvements, encryption fixes, and DevTools support
- Adjusted UI layout: increased window to 1300x1200, Network Log to 250px
- Fixed encryption bugs in main.js, file-editor.js, and setupEchoHandler
- Added Network Monitor with request history sidebar
- Implemented config management (backup/restore scripts)
- Created comprehensive documentation (BUILD.md, ENCRYPTION.md, etc.)
- Added DevTools support for debugging
- Integrated network log clearing with Clear Chat
- Removed deprecated files (ENCryptionArchitGuide.md, old rust/ project)
- Version bumped to 2.5.2

--- a/tauri-app/.gitignore
+++ b/tauri-app/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Config with real API keys (DO NOT COMMIT)
+config_templates/config.json
+config_templates/*.backup
+
+# Keep template example (without keys)
+!config_templates/config.json.template
